[project]
name = "langgraph-proyecto-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.2",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
